Issue #147. Javadoc warnings are suppressed.